feat: user endpoints
